--- a/Main/Src/CodeShare.Core/CodeShare.Core.csproj
+++ b/Main/Src/CodeShare.Core/CodeShare.Core.csproj
@@ -46,6 +46,7 @@
     <Compile Include="..\Common\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CodeSnippet.cs" />
     <Compile Include="PagedResult.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="ProjectFile.cs" />
