--- a/Main/Src/CodeShare.Data/CodeShare.Data.csproj
+++ b/Main/Src/CodeShare.Data/CodeShare.Data.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\201410242016202_RequestProjectOpening.Designer.cs">
       <DependentUpon>201410242016202_RequestProjectOpening.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201411231905395_AddedCodeSnippets.cs" />
+    <Compile Include="Migrations\201411231905395_AddedCodeSnippets.Designer.cs">
+      <DependentUpon>201411231905395_AddedCodeSnippets.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
@@ -87,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201410242016202_RequestProjectOpening.resx">
       <DependentUpon>201410242016202_RequestProjectOpening.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201411231905395_AddedCodeSnippets.resx">
+      <DependentUpon>201411231905395_AddedCodeSnippets.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
