--- a/Main/Src/sonar-project.properties
+++ b/Main/Src/sonar-project.properties
@@ -1,12 +1,14 @@
 ﻿#required
-sonar.projectKey=codeshare
+sonar.projectKey=CS
 sonar.projectName=CodeShare
 sonar.projectVersion=1.0
 
+sonar.sources=.
+sonar.language=cs
 sonar.sourceEncoding=UTF-8
 
 sonar.visualstudio.enable=true
+sonar.dotnet.visualstudio.solution.file=CodeShare.sln
+sonar.dotnet.excludeGeneratedCode=true
 
 sonar.cs.opencover.reportsPaths=opencover.xml
-
-sonar.sources=.
