--- a/Main/Src/CodeShare.Application/CodeShare.Application.csproj
+++ b/Main/Src/CodeShare.Application/CodeShare.Application.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +43,8 @@
     <Compile Include="..\Common\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="IProjectService.cs" />
+    <Compile Include="IUserService.cs" />
     <Compile Include="ProjectService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
@@ -58,10 +61,6 @@
     <ProjectReference Include="..\Common\CrossCutting.Core\CrossCutting.Core.csproj">
       <Project>{c9213684-eab1-4c17-9313-534709c4fcb6}</Project>
       <Name>CrossCutting.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Common\CrossCutting.MainModule\CrossCutting.MainModule.csproj">
-      <Project>{cd7c9e78-0d7c-4b4e-8e5d-59459360b1b7}</Project>
-      <Name>CrossCutting.MainModule</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
