--- a/Main/Src/CodeShare.Api.Test/CodeShare.Api.Test.csproj
+++ b/Main/Src/CodeShare.Api.Test/CodeShare.Api.Test.csproj
@@ -50,6 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="..\Common\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Controllers\ProjectControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
