Add minimal folder layout change

--- a/Main/Src/CodeShare.Api/CodeShare.Api.csproj
+++ b/Main/Src/CodeShare.Api/CodeShare.Api.csproj
@@ -124,9 +124,7 @@
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Compile Include="..\Common\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
