--- a/Main/Src/CodeShare.Application.Test/CodeShare.Application.Test.csproj
+++ b/Main/Src/CodeShare.Application.Test/CodeShare.Application.Test.csproj
@@ -51,6 +51,7 @@
     <Compile Include="..\Common\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ProjectServiceTest.cs" />
     <Compile Include="UserServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
